src/test/resources/Parser/SyntaxErrors/ParameterizedTypeVariable.front
class A:
    f() {
        type T;
        T<int32>;
    }